# Parallel-Computing

./: .gitignore
eigenvalue_problem/: CMakeLists.txt  driver.cpp  iteration_number.cpp  iteration_number_fempc.cpp  iteration_number_fempc_mf.cpp  mult.cpp  preprocess.cpp  preprocess_fem.cpp  test.cpp
eigenvalue_problem/data/: mass_spectral_analysis.txt
eigenvalue_problem/include/: AbscissaeGenerator.hpp  BSplineBasis.hpp  BernsteinBasis.hpp  ControlPointGenerator.hpp  Element.hpp  ElementFEM.hpp  ElementMF.hpp  FileManager.hpp  GlobalAssembly.hpp  GlobalAssemblyMF.hpp  IDGenerator.hpp  IENGenerator.hpp  LocalAssembly.hpp  LocalAssemblyMF.hpp  NURBSExtractionGenerator.hpp  Partition.hpp  QuadraturePoint.hpp  RefElement.hpp
eigenvalue_problem/input/: iternum.sh  iternum_fempc.sh
eigenvalue_problem/matlab/: plotcond.m  vis.m
eigenvalue_problem/src/: AbscissaeGenerator.cpp  BSplineBasis.cpp  BernsteinBasis.cpp  ControlPointGenerator.cpp  Element.cpp  ElementFEM.cpp  ElementMF.cpp  FileManager.cpp  GlobalAssembly.cpp  GlobalAssemblyMF.cpp  IDGenerator.cpp  IENGenerator.cpp  LocalAssembly.cpp  LocalAssemblyMF.cpp  NURBSExtractionGenerator.cpp  Partition.cpp  QuadraturePoint.cpp  RefElement.cpp
matrix_free/: CMakeLists.txt  driver.cpp  iteration_number_fempc.cpp  iteration_number_fempc_mf.cpp  iteration_number_fempc_mfsf.cpp  mult_mf.cpp  mult_sf.cpp
matrix_free/include/: BernsteinBasis.hpp  Element.hpp  ElementMF.hpp  ElementMFSF.hpp  FileManager.hpp  GlobalAssemblyMF.hpp  LocalAssembly.hpp  LocalAssemblyMF.hpp  LocalAssemblyMFSF.hpp  RefElement.hpp
matrix_free/input/: iternum_fempc.sh
matrix_free/matlab/: vis.m
matrix_free/src/: BernsteinBasis.cpp  ElementMF.cpp  ElementMFSF.cpp  FileManager.cpp  GlobalAssembly.cpp  GlobalAssemblyMF.cpp  IDGenerator.cpp  LocalAssemblyMF.cpp  LocalAssemblyMFSF.cpp  Partition.cpp  RefElement.cpp
matrix_free_gpu/: CMakeLists.txt  dry_run.cpp  iteration_number_fempc_mf.cpp  iteration_number_fempc_mf.cu  matrixfreegpu.cu  multtest.cu  preprocess.cpp  preprocess_fem.cpp  test.cpp
matrix_free_gpu/data/: analysistime.txt  fempc_mf.txt  nonepc_mf.txt
matrix_free_gpu/include/: BernsteinBasis.hpp  Elem2COOGenerator.hpp  Element.hpp  ElementFEM.hpp  ElementMF.hpp  ElementMFSF.hpp  FileManager.hpp  GlobalAssembly.hpp  NURBSExtractionGenerator.hpp  Partition.hpp  QuadraturePoint.hpp  assembly.cuh
matrix_free_gpu/input/: iternum.sh
matrix_free_gpu/src/: BernsteinBasis.cpp  Elem2COOGenerator.cpp  Element.cpp  ElementMF.cpp  FileManager.cpp  GlobalAssembly.cpp  GlobalAssemblyDR.cpp  GlobalAssemblyMF.cpp  IDGenerator.cpp  Partition.cpp  mult.cu
matrix_free_gpu/test_petsc_with_gpu/: testelem2coo.cu
matrix_free_gpu/test_petsc_with_gpu/include/: ElementFEM.hpp  FileManager.hpp  LocalAssembly.hpp  RefElement.hpp
matrix_free_gpu/test_petsc_with_gpu/input/: info.txt
matrix_free_gpu/test_petsc_with_gpu/src/: Partition.cpp  QuadraturePoint.cpp
matrix_free_gpu_dbd/: CMakeLists.txt  InvLMtest.cpp  info.txt  matrixfreegpu.cu  memorytest.cu  multtest.cu
matrix_free_gpu_dbd/include/: ControlPointGenerator.hpp  FileManager.hpp  GlobalAssemblyDR.hpp  GlobalAssemblyMF.cuh  InvLM.hpp  mult.cuh
matrix_free_gpu_dbd/src/: ControlPointGenerator.cpp  GlobalAssemblyMF.cu  InvLM.cpp  LocalAssemblyMF.cpp  NURBSExtractionGenerator.cpp  assembly.cu  mult.cu
matrix_free_mpi_gpu/: ghost_map.cpp  multtest.cu
matrix_free_mpi_gpu/include/: BSplineBasis.hpp  ElementMF.hpp  FileManager.hpp  InvLM.hpp  mult.cuh
matrix_free_mpi_gpu/src/: FileManager.cpp  GlobalAssembly.cu  LocalAssembly.cpp  Partition.cpp
matrix_vector_multiplication/1.naive/: main.cpp
matrix_vector_multiplication/2.std:thread/: CMakeLists.txt  main.cpp
matrix_vector_multiplication/3.neon/: CMakeLists.txt
matrix_vector_multiplication/4.cuda/: CMakeLists.txt  main.cpp
matrix_vector_multiplication/4.mpi/: CMakeLists.txt  main.cpp
matrix_vector_multiplication/data_parallel/: main.cpp
matrix_vector_multiplication/naive/: CMakeLists.txt
matrix_vector_multiplication/shared_memory_parallelism/: main.cpp
profile/: matmul.cpp  matmul_block.cpp
test/: CMakeLists.txt  cuda_function_test.cpp  cuda_function_test.cu  ghost_with_cuda.cpp
test_petsc_with_gpu/: CMakeLists.txt  assemblytest.cu  coo2aij.cu  dry_run.cpp  matrixfreegpu.cu  memeorytest.cpp  multtest.cu  preprocess_fem.cpp  testelem2coo.cu
test_petsc_with_gpu/include/: Elem2COOGenerator.hpp  FileManager.hpp  GlobalAssembly.cuh  GlobalAssembly.hpp  GlobalAssemblyDR.hpp  GlobalAssemblyMF.cuh  GlobalAssemblyMF.hpp  LocalAssemblyMF.hpp  LocalAssemblyMFSF.hpp  assembly.cuh  assembly.hpp  memory.cuh  memory.hpp  mult.cuh
test_petsc_with_gpu/src/: Elem2COOGenerator.cpp  ElementFEM.cpp  FileManager.cpp  GlobalAssembly.cpp  GlobalAssembly.cu  GlobalAssemblyDR.cpp  GlobalAssemblyMF.cu  Partition.cpp  assembly.cu  memory.cu  mult.cu
